bev/style.css
h1 {
	style="text-align: left;"
	margin-bottom: 2rem;
}

h5{
  font-weight: normal;
  text-align: justify;
}
a {
	color: #800084;
}

a:hover {
  color: #cb5920;
  text-decoration: none;
}

hr {
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 0;
  border-top: 3px solid #800084;
}

hrs {
    margin-top: 1rem;
    margin-bottom: 1rem;
    border: 0;
    border-top: 1px solid #800084;
}

hr.new {
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 0;
  border-top: 2px solid #800084;
}


p {
  text-align: justify;
}

td {
  font-size: 5px;
  padding: 2px;
  text-align: center;
}

table {
  border-collapse: collapse;
  margin-bottom: 1.3em;
  width:80%;
}

.current_tab{font-weight: bold;}

.subdued_text{
  color: #999999;
  margin: 0px 1em 1em 0px;
}

.blank{
  height: 2em;
  clear: both;
}

.label-info {
  background-color: #800084;
}

.label-info[href]:hover {
  background-color: #cb5920;
}

